# deskapp-base-django

./: .gitignore  compose.yaml  dockerfile  pyproject.toml
categorys/: models.py
categorys/migrations/: 0001_initial.py  0002_alter_category_description.py
cities/: models.py
cities/migrations/: 0001_initial.py
home/: views.py
locale/pt_BR/LC_MESSAGES/: django.po
projeto/: settings.py  urls.py
static/vendors/scripts/: datatable-setting.js  validators.js
static/vendors/styles/: customize.css
templates/: 400.html  403.html  404.html  500.html  503.html
templates/bases/: base_create.html  base_dashboard.html  base_list.html
templates/home/: index.html
templates/includes/: _header_section.html  _render_errors.html
templates/users/: _validators.html  create_user.html  list_users.html  login.html  register.html  update_user.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_city_user_document_number_user_person_type_and_more.py  0003_remove_user_gender.py  0004_alter_user_image_profile.py
users/services/: api.py  schemas.py
utils/: views.py
